--- a/Connect4_Frontend/src/app/app.css
+++ b/Connect4_Frontend/src/app/app.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   font-family: Arial, sans-serif;
-  background-color: #a89c9c;
+  background: linear-gradient(135deg, #bdb88d, #38bdb6);
   min-height: 100vh;
   padding: 10px;
   box-sizing: border-box;
